[CSS Grid Layout] getComputedStyle() not using author's order when showing named grid lines https://bugs.webkit.org/show_bug.cgi?id=127837

Reviewed by David Hyatt.

Source/WebCore:

Added a couple of new Vectors to store the names of the grid lines
respecting their order. They will be used to get the right outcome
for getComputedStyle().

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::addValuesForNamedGridLinesAtIndex):
(WebCore::valueForGridTrackList):
* css/StyleResolver.cpp:
(WebCore::createGridTrackList):
(WebCore::StyleResolver::applyProperty):
* rendering/style/RenderStyle.h:
* rendering/style/StyleGridData.cpp:
(WebCore::StyleGridData::StyleGridData):
* rendering/style/StyleGridData.h:
(WebCore::StyleGridData::operator==):

LayoutTests:

Grid line names are now shown using the exact same order as the one used in the CSS.

* fast/css-grid-layout/named-grid-line-get-set-expected.txt:
* fast/css-grid-layout/named-grid-line-get-set.html:
* fast/css-grid-layout/non-named-grid-line-get-set-expected.txt:

Canonical link: https://commits.webkit.org/148323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165742 268f45cc-cd09-0410-ab3c-d52691b4dbfc